# rers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
rers/: elo.py  get_cfbd.py  rers.py
tests/: test_cfbd.py  test_elo.py  test_rers.py
