[tool.poetry]
name = "rers"
version = "0.1.0"
description = "Recursive Elo Rating System, for use with NCAA FBS football"
authors = ["Tyler Hoffman <tylerhoffman2020@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cfbd = "^4.4.12"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.259"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.0"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
